2010-03-25  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* include/Makefile.am (noinst_HEADERS): Add ProgramOptions.h

	* src/dmcsc.cpp (main): included Program options as a header
	* src/dmcsd.cpp: Likewise.
	* src/genTest.cpp: Likewise.

2010-03-23  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/dmcsc.cpp: Replaced command line arguments with boost program options
	* src/dmcsd.cpp: Likewise

	* configure.ac: Add BOOST_PROGRAM_OPTIONS
	* src/Makefile.am: Likewise

2010-03-03  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/dmcsc.cpp: Fix debug output.
	* include/PrimitiveDMCS.tcc: Likewise.

2010-03-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/ProcessCommandLine.h: Remove.

	* include/BRGrammar.h: Update copyright information.
	* include/BRGrammar.tcc: Likewise.
	* include/BaseBuilder.h: Likewise.
	* include/BaseDMCS.h: Likewise.
	* include/BaseSolver.h: Likewise.
	* include/BaseVisitor.h: Likewise.
	* include/BeliefCombination.h: Likewise.
	* include/BeliefState.h: Likewise.
	* include/BinaryTreeQPGenerator.h: Likewise.
	* include/BridgeRulesBuilder.h: Likewise.
	* include/BridgeRulesBuilder.tcc: Likewise.
	* include/CNFLocalLoopFormulaBuilder.h: Likewise.
	* include/Cache.h: Likewise.
	* include/ClaspProcess.h: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* include/ClaspResultGrammar.h: Likewise.
	* include/ClaspResultGrammar.tcc: Likewise.
	* include/Client.h: Likewise.
	* include/Client.tcc: Likewise.
	* include/CnfBuilder.h: Likewise.
	* include/CnfBuilder.tcc: Likewise.
	* include/CnfGrammar.h: Likewise.
	* include/CnfGrammar.tcc: Likewise.
	* include/CommandType.h: Likewise.
	* include/Context.h: Likewise.
	* include/ContextGenerator.h: Likewise.
	* include/DLVVisitor.h: Likewise.
	* include/DiamondOptQPGenerator.h: Likewise.
	* include/DiamondQPGenerator.h: Likewise.
	* include/DiamondZigZagOptQPGenerator.h: Likewise.